# cyberdog_camera

./: README.md
camera_api/: CMakeLists.txt  package.xml
camera_api/include/camera_api/: camera_api.hpp
camera_api/src/: camera_api.cpp  mono_stream.cpp  mono_stream.hpp  rgb_stream.cpp  rgb_stream.hpp
camera_base/: CMakeLists.txt  package.xml
camera_base/cmake/: FindARGUS.cmake
camera_base/include/camera_base/: camera_buffer.hpp  camera_dispatcher.hpp  color_convert.hpp  jpeg_encoder.hpp  stream_consumer.hpp  video_encoder.hpp  video_muxer.hpp
camera_base/include/camera_base/cuda/: CUDACrop.hpp  cuda_convert.hpp
camera_base/src/: camera_dispatcher.cpp  color_convert.cpp  jpeg_encoder.cpp  stream_consumer.cpp  video_encoder.cpp  video_muxer.cpp
camera_base/src/cuda/: CUDAConvert.cu  CUDACrop.cu
camera_service/: CMakeLists.txt  package.xml
camera_service/include/camera_algo/: algo_dispatcher.hpp  algorithm_base.hpp  body_detect.hpp  body_detector.hpp  face_detect.hpp  face_detector.hpp  feature_detector.hpp
camera_service/include/camera_service/: algo_stream_consumer.hpp  argus_camera_context.hpp  camera_manager.hpp  face_manager.hpp  face_manager_node.hpp  h264_stream_consumer.hpp  main_camera_node.hpp  ncs_client.hpp  ncs_client_dummy.hpp  rgb_stream_consumer.hpp  ros2_service.hpp  semaphore_op.hpp  shared_memory_op.hpp  video_stream_consumer.hpp
camera_service/src/: algo_stream_consumer.cpp  argus_camera_context.cpp  camera_manager.cpp  face_manager.cpp  face_manager_node.cpp  h264_stream_consumer.cpp  main_camera_node.cpp  ncs_client.cpp  ncs_client_dummy.cpp  rgb_stream_consumer.cpp  video_stream_consumer.cpp
camera_service/src/camera_algo/: algo_dispatcher.cpp  algorithm_base.cpp  body_detect.cpp  body_detector.cpp  face_detect.cpp  face_detector.cpp  feature_detector.cpp
camera_test/: CMakeLists.txt  package.xml
camera_test/config/: stereo_camera.yaml
camera_test/launch/: stereo_camera.py
camera_test/src/: camera_server.cpp  camera_test.cpp  dispatcher.cpp  global_timestamp_reader.cpp  global_timestamp_reader.h  stereo_camera.cpp
camera_utils/: CMakeLists.txt  package.xml
camera_utils/include/camera_utils/: camera_log.hpp  camera_queue.hpp  camera_utils.hpp  global_timestamp_reader.h
camera_utils/src/: camera_utils.cpp  dispatcher.cpp  global_timestamp_reader.cpp
